--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-bs-theme="dark">
+<html lang="pt-br"> <!-- data-bs-theme="dark" -->
 <head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,12 @@
 
     <link rel="stylesheet" href="/static/css/style.css">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 
     {% block styles %}{% endblock %}
 </head>
-<body>
+<body style="background-color: aliceblue;">
     {% block content %}
         <!-- Template here -->
     {% endblock %}
