--- a/templates/userArea.html
+++ b/templates/userArea.html
@@ -7,23 +7,20 @@
 {% endblock %}
 
 {% block content %} 
-    <header class="d-flex justify-content-around p-3 mt-0">
-        <div class="logo">
-            <img src="/static/img/Maleta_Medica-removebg-preview.png" alt="LogoDosador">
+    <header class="container-fluid d-flex justify-content-between" style="height: 100px; border-bottom: solid 2px rgb(0, 140, 255);">
+        <div class="ms-4">
+            <img src="static/img/Maleta_Medica-removebg-preview.png" alt="" style="width: 260px; height: 100px;">
         </div>
 
-        <div class="botoes">
+        <div class="botoes me-5 mt-4">
             <div class="dropdown-center">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Opções
+                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-list"></i> Opções
                 </button>
 
                 <ul class="dropdown-menu">
-                    <form action="/logout" method="POST">
-                        <li><button class="dropdown-item" type="submit">Logout</button></li>
-                    </form>
                     <form action="/deleteAccount", method="POST">
-                        <li><button class="dropdown-item" type="submit">Deletar conta</button></li>
+                        <li><button class="dropdown-item" type="submit"><i class="bi bi-person-x"></i> Deletar conta</button></li>
                     </form>
                 </ul>
             </div>
